--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,3 @@
-
-
 [metadata]
 name = cm_aoadmm
 keywords=cm_aoadmm
@@ -17,6 +15,8 @@ classifiers=
     Natural Language :: English
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
 
 [options]
 packages = find:
@@ -31,19 +31,27 @@ install_requires =
 [options.extras_require]
 all=
     condat_tv
+devel=
+    coverage
+    pytest
+    pytest-cov
+    pytest-randomly
+    sphinx
+    sphinx-rtd-theme
+    sphinx-gallery
+    numpydoc
+    flake8
+    black
+    isort
+    bump2version
+    wheel
 
 [options.packages.find]
 where=src
 
-
-
 [bdist_wheel]
 universal = 1
-
-
 
 [flake8]
 exclude = docs
 max-line-length = 120
-
-
