--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -9,5 +9,9 @@ jobs:
       - uses: actions/setup-python@v2
         with: 
           python-version: '3.8'
+      - name: install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip -e .[all,devel]
       - name: run tests
         run: python3 -m pytest
