--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -12,6 +12,6 @@ jobs:
       - name: install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip -e .[all,devel]
+          python -m pip install -e .[all,devel]
       - name: run tests
         run: python3 -m pytest
