Change module name

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,13 +1,13 @@
 [metadata]
-name = cm_aoadmm
-keywords=cm_aoadmm
+name = matcouply
+keywords=matcouply
 version = 0.0.1
 license = "MIT license",
 description = Regularised coupled matrix factorisation with AO-ADMM
 long_description = file: README.rst
 author = Marie Roald
 author_email = roald.marie@gmail.com
-url=https://github.com/marieroald/cm_aoadmm
+url=https://github.com/marieroald/matcouply
 classifiers=
     Development Status :: 2 - Pre-Alpha
     Intended Audience :: Developers
