--- a/bumpversion.cfg
+++ b/bumpversion.cfg
@@ -8,7 +8,7 @@ tag = True
 search = version='{current_version}'
 replace = version='{new_version}'
 
-[bumpversion:file:cm_aoadmm/__init__.py]
+[bumpversion:file:matcouply/__init__.py]
 search = __version__ = '{current_version}'
 replace = __version__ = '{new_version}'
 
