--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,3 +7,10 @@ line-length = 120
 [tool.isort]
 known_third_party = []
 profile = "black" 
+
+[tool.pytest.ini_options]
+addopts = "--doctest-modules"
+testpaths = [
+    "tests",
+    "src",
+]
