Added docstrings and did some refactoring
 * Added input checking for some penalties
 * Renamed some parameters
 * Added number of iterations argument for PARAFAC2
 * Added metaclass and utility for inheritable docstrings
 * Made RowVectorPenalty inherit from MatrixPenalty which now inherits from MatricesPenalty
 * Added HardConstraintMixin
 * Made verbosity be dependent on iteration

--- a/setup.cfg
+++ b/setup.cfg
@@ -39,6 +39,7 @@ devel=
     sphinx
     sphinx-rtd-theme
     sphinx-gallery
+    sphinxcontrib-bibtex
     numpydoc
     flake8
     black
@@ -56,3 +57,7 @@ universal = 1
 ignore = E741, E203, W503
 exclude = docs
 max-line-length = 120
+
+[coverage:run]
+omit = 
+    src/matcouply/_doc_utils.py
