--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,17 @@
-pip
-
-wheel
-twine
-
-flake8
-black
-isort
-bump2version
-
-sphinx
-numpydoc
-
 coverage
 pytest
 pytest-cov
 pytest-randomly
-
+sphinx
+sphinx-rtd-theme
+sphinx-gallery
+sphinxcontrib-bibtex
+numpydoc
+flake8
+black
+isort
+bump2version
+wheel
+numpy
+scipy
+tensorly
