Added darglint dependency

--- a/setup.cfg
+++ b/setup.cfg
@@ -41,6 +41,7 @@ devel=
     sphinx-gallery
     numpydoc
     flake8
+    darglint
     black
     isort
     bump2version
@@ -56,3 +57,4 @@ universal = 1
 ignore = E741, E203, W503
 exclude = docs
 max-line-length = 120
+docstring_style = numpy
