Added autodocsumm dependency

--- a/setup.cfg
+++ b/setup.cfg
@@ -40,7 +40,7 @@ devel=
     sphinx-rtd-theme
     sphinx-gallery
     sphinxcontrib-bibtex
-    numpydoc
+    autodocsumm
     flake8
     darglint
     black
