Added experimental requirement

--- a/setup.cfg
+++ b/setup.cfg
@@ -49,6 +49,7 @@ devel=
     wheel
     matplotlib
     plotly
+    git+https://github.com/marieroald/component_vis
 
 [options.packages.find]
 where=src
