Added pandas requirement

--- a/setup.cfg
+++ b/setup.cfg
@@ -49,6 +49,7 @@ devel=
     wheel
     matplotlib
     plotly
+    pandas
     git+https://github.com/marieroald/component-vis
 
 [options.packages.find]
