--- a/setup.cfg
+++ b/setup.cfg
@@ -36,17 +36,19 @@ devel=
     pytest
     pytest-cov
     pytest-randomly
+    flake8
+    darglint
+    black
+    isort
     sphinx
     sphinx-rtd-theme
     sphinx-gallery
     sphinxcontrib-bibtex
     autodocsumm
-    flake8
-    darglint
-    black
-    isort
     bump2version
     wheel
+
+examples=
     matplotlib
     plotly
     pandas
