--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = matcouply
 keywords=matcouply
 version = 0.0.1
-license = "MIT license",
+license = MIT
 description = Regularised coupled matrix factorisation with AO-ADMM
 long_description = file: README.rst
 author = Marie Roald
