--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -15,6 +15,7 @@ jobs:
       - name: install dependencies
         run: |
           python -m pip install --upgrade pip
+          python -m pip install git+https://github.com/tensorly/tensorly.git
           python -m pip install -e .[all,devel]
       - name: run tests
         run: python3 -m pytest --cov=matcouply --cov-report=xml
