Added unimodal regression

--- a/setup.cfg
+++ b/setup.cfg
@@ -31,8 +31,11 @@ install_requires =
     tqdm
 
 [options.extras_require]
+numba=
+    numba
 all=
     condat-tv
+    numba
 devel=
     coverage
     pytest
