--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -6,7 +6,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest]
+        os: [ubuntu-latest, windows-latest, macos-latest]
+        backend: ['numpy', 'pytorch']
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
@@ -16,10 +17,14 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install git+https://github.com/tensorly/tensorly.git
+          python -m pip install torch
           python -m pip install -e .[all,devel]
       - name: run tests
         run: python3 -m pytest --cov=matcouply --cov-report=xml
+        env:
+          TENSORLY_BACKEND: ${{ matrix.backend }}
       - name: upload coverage to Codecov
+        if: ${{ matrix.backend == 'numpy' && matrix.os == 'ubuntu-latest'}}
         uses: codecov/codecov-action@v2
         with:
           token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
