--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = matcouply
 keywords=matcouply
 version = 0.0.1
 license = MIT
-description = Regularised coupled matrix factorisation with AO-ADMM
+description = Regularized coupled matrix factorisation with AO-ADMM
 long_description = file: README.rst
 author = Marie Roald
 author_email = roald.marie@gmail.com
