--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -17,6 +17,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install git+https://github.com/tensorly/tensorly.git
+          python -m pip install --no-binary condat-tv
           python -m pip install torch
           python -m pip install -e .[all,devel]
       - name: run tests
