--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -15,7 +15,7 @@ jobs:
           python-version: '3.8'
       - name: install dependencies
         run: |
-          python -m pip install --upgrade pip
+          python -m pip install --upgrade pip wheel
           python -m pip install git+https://github.com/tensorly/tensorly.git
           python -m pip install --no-binary condat-tv
           python -m pip install torch
