--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -18,8 +18,9 @@ jobs:
           python -m pip install --upgrade pip wheel
           python -m pip install git+https://github.com/tensorly/tensorly.git
           python -m pip install torch
-          python -m pip install --no-binary :all: condat-tv 
           python -m pip install -e .[all,devel]
+          python -m pip uninstall condat-tv
+          python -m pip install --no-binary :all: condat-tv 
       - name: run tests
         run: python3 -m pytest --cov=matcouply --cov-report=xml
         env:
