--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -19,7 +19,7 @@ jobs:
           python -m pip install git+https://github.com/tensorly/tensorly.git
           python -m pip install torch
           python -m pip install -e .[all,devel]
-          python -m pip uninstall condat-tv
+          python -m pip uninstall condat-tv -y
           python -m pip install --no-binary :all: condat-tv 
       - name: run tests
         run: python3 -m pytest --cov=matcouply --cov-report=xml
