--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -17,6 +17,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip wheel
           python -m pip install git+https://github.com/tensorly/tensorly.git
+          python -m pip install numpy==1.21.5
           python -m pip install torch
           python -m pip install -e .[all,devel]
           python -m pip uninstall condat-tv -y
