--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -16,7 +16,7 @@ jobs:
       - name: install dependencies
         run: |
           python -m pip install --upgrade pip wheel
-          python -m pip install numpy==1.20.3
+          python -m pip install numpy==1.22.0 numba==0.53.*
           python -m pip install git+https://github.com/tensorly/tensorly.git
           python -m pip install torch
           python -m pip install -e .[all,devel]
