--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,4 +1,16 @@
+version: 2
+
 python:
   setup_py_install: true
   install:
+    - path: .
+      method: pip
+      extra_requirements:
+        devel
+        examples
+        all
     - requirements: requirements.txt
+
+
+# Default
+formats: []
