--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -5,10 +5,7 @@ python:
   install:
     - path: .
       method: pip
-      extra_requirements:
-        devel
-        examples
-        all
+      extra_requirements: [devel, examples, all]
     - requirements: requirements.txt
 
 
