--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -17,7 +17,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip wheel
           python -m pip install git+https://github.com/tensorly/tensorly.git
-          python -m pip install torch, numba
+          python -m pip install torch numba
           python -m pip install -e .[all,devel]
       - name: run tests
         run: python3 -m pytest --cov=matcouply --cov-report=xml
