--- a/setup.cfg
+++ b/setup.cfg
@@ -31,6 +31,9 @@ install_requires =
     tqdm
 
 [options.extras_require]
+numba=
+    numpy>=1.22.1
+    numba==0.53.1
 gpl=
     condat-tv
 devel=
