--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -31,7 +31,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest]
     steps:
       - uses: actions/checkout@v2
     
@@ -42,12 +42,9 @@ jobs:
       - name: Setup pip
         run: |
             python -m pip install --upgrade pip
-            python -m pip install cibuildwheel==1.6.4
     
       - name: Build wheel
-        run: python -m cibuildwheel --output-dir dist/
-        env:
-          CIBW_BUILD: cp36-* cp37-* cp38-*
+        run: python -m pip wheel -w dist/
 
       - uses: actions/upload-artifact@v2
         with:
