Added build dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,9 @@
+[build-system]
+requires = ["setuptools", "wheel"]
+build-backend = "setuptools.build_meta"
 
 [tool.black]
 line-length = 120
-
-
 
 [tool.isort]
 known_third_party = []
