Added python version requirement and removed universal wheel

--- a/setup.cfg
+++ b/setup.cfg
@@ -29,6 +29,7 @@ install_requires =
     tensorly
     pandas
     tqdm
+python_requires = >=3.6
 
 [options.extras_require]
 numba=
@@ -61,9 +62,6 @@ examples=
 
 [options.packages.find]
 where=src
-
-[bdist_wheel]
-universal = 1
 
 [flake8]
 ignore = E741, E203, W503
