--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -45,7 +45,7 @@ jobs:
             python -m pip install --upgrade pip
     
       - name: Build wheel
-        run: python setup.py bdist_wheel
+        run: pip wheel . -w dist --use-feature=in-tree-build --no-deps
 
       - uses: actions/upload-artifact@v2
         with:
