--- a/setup.cfg
+++ b/setup.cfg
@@ -59,6 +59,7 @@ examples=
     matplotlib
     plotly
     wordcloud
+    tlviz
 
 [options.packages.find]
 where=src
@@ -70,6 +71,6 @@ max-line-length = 120
 docstring_style = numpy
 
 [coverage:run]
-omit = 
+omit =
     src/matcouply/_doc_utils.py
     src/matcouply/conftest.py
