--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -13,14 +13,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-    
+
       - uses: actions/setup-python@v2
         with:
           python-version: 3.8
-   
+
       - name: Setup pip
         run: python -m pip install --upgrade pip
-    
+
       - name: Build source distribution
         run: python setup.py sdist
 
@@ -35,17 +35,17 @@ jobs:
         os: [ubuntu-latest]
     steps:
       - uses: actions/checkout@v2
-    
+
       - uses: actions/setup-python@v2
         with:
           python-version: 3.8
-   
+
       - name: Setup pip
         run: |
             python -m pip install --upgrade pip
-    
+
       - name: Build wheel
-        run: pip wheel . -w dist --use-feature=in-tree-build --no-deps
+        run: pip wheel . -w dist --no-deps
 
       - uses: actions/upload-artifact@v2
         with:
