--- a/setup.cfg
+++ b/setup.cfg
@@ -27,8 +27,6 @@ install_requires =
     numpy
     scipy
     tensorly
-    pandas
-    tqdm
 python_requires = >=3.6
 
 [options.extras_require]
@@ -37,6 +35,12 @@ numba=
     numba == 0.53.1
 gpl=
     condat-tv
+testing=
+    pytest
+data=
+    pandas
+    tqdm
+    requests
 devel=
     coverage
     pytest
