--- a/setup.cfg
+++ b/setup.cfg
@@ -54,6 +54,7 @@ devel=
     sphinx-rtd-theme
     sphinx-gallery
     sphinxcontrib-bibtex
+    nbsphinx
     autodocsumm
     bump2version
     wheel
