--- a/setup.cfg
+++ b/setup.cfg
@@ -54,8 +54,9 @@ devel=
     sphinx-rtd-theme
     sphinx-gallery
     sphinxcontrib-bibtex
-    nbsphinx
     autodocsumm
+    nbsphinx
+    ipython
     bump2version
     wheel
     scikit-learn
