Update numba dependencies

--- a/setup.cfg
+++ b/setup.cfg
@@ -31,8 +31,8 @@ python_requires = >=3.6
 
 [options.extras_require]
 numba=
-    numpy >= 1.22.1
-    numba == 0.53.1
+    numpy >= 1.21, <1.25
+    numba == 0.56.4
 gpl=
     condat-tv
 testing=
