--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -12,14 +12,15 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
         with:
-          python-version: '3.8'
+          python-version: '3.10'
       - name: install dependencies
         run: |
           python -m pip install --upgrade pip wheel
-          python -m pip install git+https://github.com/tensorly/tensorly.git
-          python -m pip install torch
-          python -m pip install numba==0.53.1
-          python -m pip install numpy==1.22.1
+          python -m pip install cython==0.29.36
+          python -m pip install torch==1.13.1
+          python -m pip install numba==0.58.1
+          python -m pip install numpy==1.24.2
+          python -m pip install condat_tv
           python -m pip install -e .[gpl,devel,data]
       - name: run all tests
         if: ${{ matrix.backend == 'numpy' }}
@@ -30,7 +31,7 @@ jobs:
       - name: run tests (no doctests)
         if: ${{ matrix.backend != 'numpy' }}
         run: |
-          python3 -m pytest tests
+          RAISE_NO_TV=1 python3 -m pytest tests
         env:
           TENSORLY_BACKEND: ${{ matrix.backend }}
       - name: upload coverage to Codecov
